--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Job Prompt</title>
+    <script src="scripts/main.js" defer></script>
+    <script src="scripts/play.js" defer></script>
 </head>
 <body>
 <main>
@@ -13,5 +15,5 @@
     <p id="role-description"></p>
     <span id="error-message"></span>
 </main>
-</body>s
+</body>
 </html>
